[package]
name = "newbie-sandbox"
version = "0.1.0"
authors = ["MeiK2333 <meik2333@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.92"
clap = { version = "3.1.18", features = ["derive"] }
log = "0.4.0"
env_logger = "0.8.3"
tempfile = "3"
